# Zotero-notebook

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/scripts/: build-plugin.mjs
app/src/: App.tsx  api.ts  main.tsx  styles.css  test-setup.ts  types.ts
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/__tests__/: audit-flow.test.tsx  citation-panel.test.tsx  detail-and-classify.test.tsx  export.test.ts  filters-bulk.test.tsx  library-view.test.tsx  new-imports.test.tsx  reading-queue.test.tsx  search-settings.test.tsx  starred-view.test.tsx  synthesis-flow.test.tsx  topbar-cost.test.tsx
app/src/components/: ChatPanel.tsx  CitationPanel.tsx  FilterBar.tsx  ItemDetailModal.tsx  ItemTable.tsx  NewImportsBanner.tsx  PathPicker.tsx  ProgressCard.tsx  SearchPalette.tsx  Sidebar.tsx  Topbar.tsx  icons.tsx
app/src/lib/: export.ts  exportActions.ts  library.ts
app/src/views/: AuditFlow.tsx  LibraryView.tsx  OnboardingView.tsx  SettingsView.tsx  SummarizeFlow.tsx  SynthesisFlow.tsx  UnclassifiedView.tsx
core/: Cargo.toml
core/src/: abstract_lookup.rs  citations.rs  classify.rs  db.rs  error.rs  keychain.rs  lib.rs  models.rs  pricing.rs  settings.rs  synthesis.rs
core/src/llm/: anthropic.rs  gemini.rs  openai_compat.rs  provider.rs  sse.rs
core/src/zotero/: local_api.rs  plugin_api.rs
core/tests/: abstract_lookup.rs  citations.rs  llm_clients.rs  services.rs  zotero_clients.rs
docs/: ARCHITECTURE.md  PLUGIN_API.md
zotero-plugin/: README.md  bootstrap.js  manifest.json  updates.json
