[package]
name = "zn-core"
version = "1.1.0"
edition = "2021"
rust-version = "1.80"
description = "Zotero Notebook core: Zotero clients, LLM providers, sidecar DB. Headless and fully testable without Tauri."

[lib]
name = "zn_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "async-secret-service",
  "tokio",
  "crypto-rust",
] }
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
